hphp/hack/test/dot_php/invalid-hack-file.php
<?hh

print("I am an invalid hack file because I have top-level statements.\n");
